# rec

./: .gitignore  README.md  TODO  code2pdf.sh  lhs2tex.tex  recgoto.cabal
doc/: recspec.md  stack.goto  stack.hs  transformation.md
examples/: churchifs.rec  churchlists.rec  churchnums.rec  composition.rec  euler1.rec  fac.goto  fac.rec  fib.goto  fib.rec  gcd.goto  gcd.rec  stdlib.rec  ycombfac.rec
src/: Goto.lhs  GotoToRec.lhs  Rec.lhs  Util.lhs
src/cmdtools/: GotoCmdTool.lhs  RecCmdTool.lhs
test/: GotoTests.lhs  Programs.hs  RecTests.lhs  TestSuite.lhs
