Name:        recgoto
Version:     0.1

--License:      BSD3
--License-file: LICENSE
Author:       Eugen Kiss (eugen@eugenkiss.com)
Maintainer:   Eugen Kiss (eugen@eugenkiss.com)
Stability:    Experimental
Category:     Language

Cabal-version:      >=1.2
Build-type:         Simple
Extra-source-files: README.mkd

Flag test
    Description: Build the tests
    Default:     False

Executable rec
    Ghc-Options:
        -O2
        -rtsopts
        -with-rtsopts=-K64M
        -fno-warn-missing-fields
        -fspec-constr-count=4
    Hs-Source-Dirs: src
    Main-Is:        cmdtools/RecCmdTool.lhs
    if flag(test)
        Buildable:  False
    Build-Depends:
        base          == 4.5.*,
        mtl           == 2.1.*,
        containers    == 0.4.*,
        hashmap       == 1.3.*,
        vector        == 0.9.*,
        parsec        == 3.1.*,
        cmdargs       == 0.9.*,
        pretty        == 1.1.*

Executable goto
    Ghc-Options:
        -O2
        -fno-warn-missing-fields
        -fspec-constr-count=4
    Hs-Source-Dirs: src
    Main-Is:        cmdtools/GotoCmdTool.lhs
    if flag(test)
        Buildable:  False
    Build-Depends:
        base          == 4.5.*,
        mtl           == 2.1.*,
        containers    == 0.4.*,
        hashmap       == 1.3.*,
        vector        == 0.9.*,
        parsec        == 3.1.*,
        cmdargs       == 0.9.*,
        pretty        == 1.1.*

Executable test
    Ghc-Options:
        -fspec-constr-count=4
        -Wall
        -fno-warn-missing-signatures
        -fno-warn-type-defaults
        -fno-warn-name-shadowing
        -fno-warn-missing-fields
    Hs-Source-Dirs: src, test
    Main-Is:        TestSuite.lhs
    if !flag(test)
        Buildable:  False
    Build-Depends:
        base          == 4.5.*,
        mtl           == 2.1.*,
        containers    == 0.4.*,
        hashmap       == 1.3.*,
        vector        == 0.9.*,
        parsec        == 3.1.*,
        cmdargs       == 0.9.*,
        pretty        == 1.1.*,

        test-framework       == 0.6.*,
        test-framework-hunit == 0.2.*,
        HUnit                == 1.2.*
